--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -5,5 +5,9 @@
         <!-- Customize your theme here. -->
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     </style>
+<!--    <style name="LaunchScreenTheme" parent="Theme.AppCompat.Light.NoActionBar">-->
+<!--    <item name="android:background">@drawable/launch_screen</item>-->
+<!--</style>-->
+
 
 </resources>
